--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "2.5.11",
     "request": "2.9.202",
     "coffee-script": "~1.3.3",
-    "mongoose": "~3.2.1"
+    "mongoose": "~3.2.1",
+    "mongomate": "~0.1.1"
   },
   "engines": {
     "node": "0.6.x"
