--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "request": "2.9.202",
     "coffee-script": "~1.3.3",
     "mongoose": "~3.2.1",
-    "mongomate": "~0.1.1"
+    "mongomate": "~0.1.1",
+    "node-md5": "0.0.1",
+    "MD5": "~1.0.3"
   },
   "engines": {
     "node": "0.6.x"
