--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "mongoose": "~3.2.1",
     "mongomate": "~0.1.1",
     "node-md5": "0.0.1",
-    "MD5": "~1.0.3"
+    "MD5": "~1.0.3",
+    "apac": "0.0.11"
   },
   "engines": {
     "node": "0.6.x"
